Fix curator